--- a/templates/post.html
+++ b/templates/post.html
@@ -197,18 +197,22 @@
                       <div class="Post-quoteButtonContainer"></div>
                     </div>
 
+                    <div class="PostStream-item" data-index="0" data-time="2015-10-16T11:25:18.000Z" data-number="2" data-id="382" style="display: block;"><article class="Post EventPost DiscussionTaggedPost"><div><i class="icon fa fa-fw fa-tag EventPost-icon"></i><div class="EventPost-info"><a class="EventPost-user" href="/u/admin"><span class="username">admin</span></a> 添加 <span class="TagsLabel "><a class="TagLabel  colored" title="非程序核心的问题" href="/t/extensions" style="color: rgb(56, 203, 186); background-color: rgb(56, 203, 186);"><span class="TagLabel-text">插件</span></a></span> 和 移除 <span class="TagsLabel "><a class="TagLabel  colored" title="非以上项目的问题，可以归类到该标签下" href="/t/other" style="color: rgb(157, 176, 175); background-color: rgb(157, 176, 175);"><span class="TagLabel-text">其它</span></a></span> 标签</div><aside class="Post-actions"><ul></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article></div>
+                    <div class="PostStream-item" data-index="0" data-time="2015-10-16T11:30:03.000Z" data-number="3" data-id="383" style="display: block;"><article class="Post EventPost DiscussionStickiedPost"><div><i class="icon fa fa-fw fa-thumb-tack EventPost-icon"></i><div class="EventPost-info"><a class="EventPost-user" href="/u/admin"><span class="username">admin</span></a> 置顶了此帖子</div><aside class="Post-actions"><ul></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article></div>
+                    <div class="PostStream-item" data-index="0" data-time="2016-06-23T23:06:38.000Z" data-number="43" data-id="27277" data-type="discussionRenamed" style="display: block;"><article class="Post undefined EventPost DiscussionRenamedPost"><div><i class="icon fa fa-fw fa-pencil EventPost-icon"></i><div class="EventPost-info"><span title="The old title was: &quot;International support&quot;"><a class="EventPost-user" href="/u/Dominion"><span class="username">Dominion</span></a> changed the title to <strong class="DiscussionRenamedPost-new">International support sites</strong>.</span></div><aside class="Post-actions"><ul></ul></aside><footer class="Post-footer"><ul></ul></footer></div></article></div>
+
                     
 
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
-                    <div class="PostStream-item" data-index="2555"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="1"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="2"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="3"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="4"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="5"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="6"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="7"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="8"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="9"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
+                    <div class="PostStream-item" data-index="10"><div class="Post CommentPost LoadingPost"><header class="Post-header"><span class="Avatar PostUser-avatar"></span><div class="fakeText"></div></header><div class="Post-body"><div class="fakeText"></div><div class="fakeText"></div><div class="fakeText"></div></div></div></div>
 
                     <div class="PostStream-item">
                       <article class="Post ReplyPlaceholder">
@@ -280,7 +284,108 @@ $(document).ready(function() {
             }
         });
   });
+
+  $.getJSON('/reply/{{post.id}}', function(data) {
+        var all_replys_text = '';
+        var all_replys = data.list;
+        var last_index;
+        for (var i=0;i<all_replys.length;i++)
+        {
+            var reply = all_replys[i];
+            
+            var index = i + 1;
+            var avatar_text;
+            if (reply.author_avatar) {
+              avatar_text = '<img class="Avatar PostUser-avatar" src="'+reply.author_avatar+'">';
+            } else {
+              avatar_text = '<span class="Avatar PostUser-avatar" style="background: rgb(208, 160, 229); text-transform: capitalize;">'+reply.author_username.substring(0,1)+'</span>';
+            }
+            var reply_text = '<article class="Post undefined CommentPost"><div><header class="Post-header"><ul><li class="item-user"><div class="PostUser"><h3><a href="/user/'+reply.author_username+'">'+avatar_text+'<span class="username">'+reply.author_username+'</span></a></h3><ul class="PostUser-badges badges"></ul></div></li><li class="item-meta"><div class="Dropdown PostMeta"><a class="Dropdown-toggle" data-toggle="dropdown"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00" title="Tuesday, March 29, 2016 5:53 PM" data-humantime="true">29 Mar</time></a><div class="Dropdown-menu dropdown-menu"><span class="PostMeta-number">Post #6</span> <span class="PostMeta-time"><time pubdate="true" datetime="2016-03-29T17:53:03+08:00">Tuesday, March 29, 2016 5:53 PM</time></span> <span class="PostMeta-ip"></span><input class="FormControl PostMeta-permalink"></div></div></li></ul></header><div class="Post-body">'+reply.content+'</div><aside class="Post-actions"><ul><li class="item-like"><button class="Button Button--link" type="button" title="赞"><span class="Button-label">赞</span></button></li><li class="item-reply"><button class="Button Button--link" type="button" title="回复"><span class="Button-label">回复</span></button></li><li><div class="ButtonGroup Dropdown dropdown Post-controls itemCount1"><button class="Dropdown-toggle Button Button--icon Button--flat" data-toggle="dropdown"><i class="icon fa fa-fw fa-ellipsis-h Button-icon"></i><span class="Button-label"></span><i class="icon fa fa-fw fa-caret-down Button-caret"></i></button><ul class="Dropdown-menu dropdown-menu Dropdown-menu--right"><li class="item-flag"><button class=" hasIcon" type="button" title="举报"><i class="icon fa fa-fw fa-flag Button-icon"></i><span class="Button-label">举报</span></button></li></ul></div></li></ul></aside><footer class="Post-footer"><ul><li class="item-liked"><div class="Post-likedBy"><i class="icon fa fa-fw fa-thumbs-o-up "></i><a href="/u/ThnhMinhV"><span class="username">ThnhMinhV</span></a>, <a href="/u/datitisev"><span class="username">datitisev</span></a>, and <a href="/u/Franz"><span class="username">Franz</span></a> like this.</div></li><li class="item-replies"><div class="Post-mentionedBy"><span class="Post-mentionedBy-summary"><i class="icon fa fa-fw fa-reply "></i><a href="/d/2352-flarum-v0-1-0-beta-5-released/31" data-number="31"><span class="username">louisw128</span></a> replied to this.</span><ul class="Dropdown-menu Post-mentionedBy-preview fade"></ul></div></li></ul></footer></div></article>'
+
+            $("[data-index='"+index+"']").html(reply_text);
+            $("[data-index='"+index+"']").attr("id", "reply"+index);
+            last_index = i;
+        }
+
+        $(".LoadingPost").parent().remove();
+    });
   
+
+  //historyState对象，提供push历史数据和获取历史数据方法。
+//linkFly原创，引用请注明出处，谢谢
+var historyState = {
+    checkCanPush: function () {
+        /// <summary>
+        ///     检测浏览器是否支持pushState方法
+        /// </summary>
+        /// <returns type="Boolean" />
+        if (window.history.pushState)
+        
+            return true;
+        return false;
+    },
+    pushState: function (data, url) {
+        /// <summary>
+        ///     状态保持方法（需要高版本浏览器支持），当canPush为true的时候表示浏览器可以进行push状态，则进行状态push并返回是否成功
+        ///     &#10;   1.1 - pushState(data,url) 将指定的data,和url push到浏览器会话历史进行状态保持【注意Url不允许跨域】
+        /// </summary>
+        /// <param name="url" type="String">
+        ///     需要写入浏览器会话历史的url
+        /// </param>
+        /// <returns type="Boolean" />
+        if (historyState.checkCanPush()) {
+            //注意data虽然可以保存数据，但是不能保存仍然引用着当前页面元素的对象，例如$("DOM")这样一个对象，就会出现ObjectCloneError
+            window.history.pushState(data, document.title, url);
+            return true;
+        }
+        return false;
+    },
+    getUrlParameter: function (fieldName) {
+        /// <summary>
+        ///     1: 获取地址栏参数方法
+        ///     &#10;    - getUrlParameter(fieldName) - 在当前Url中查询指定的参数，返回查询得到的值，当不支持pushState或没有查询到参数的时候返回空字符串
+        /// </summary>
+        /// <param name="fieldName" type="String">
+        ///     要查询的字符串
+        /// </param>
+        /// <returns type="String" />
+        if (historyState.checkCanPush()) {
+            var urlString = document.location.search;
+            if (urlString != null) {
+                var typeQu = fieldName + "=";
+                var urlEnd = urlString.indexOf(typeQu);
+                if (urlEnd != -1) {
+                    var paramsUrl = urlString.substring(urlEnd + typeQu.length);
+                    var isEnd = paramsUrl.indexOf('&');
+                    if (isEnd != -1) {
+                        return paramsUrl.substring(0, isEnd);
+                    }
+                    else {
+                        return paramsUrl;
+                    }
+                }
+                else {
+                    return "";
+                }
+            }
+            else {
+                return "";
+            }
+        } else {
+            return '';
+        }
+    }
+}
+
+//historyState对象调用示例
+window.onload = function () {
+    //写入历史会话
+    historyState.pushState({ reply: 1 }, window.location.pathname + '?reply=1');
+    //获取历史会话的数据（获取url的参数数据）
+    var pageIndex = historyState.getUrlParameter('reply');
+    //进行数据还原操作...
+
+}
   
 });
 </script>
