修改首页样式

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
         {%endif%}
       <ul class="DiscussionListItem-badges badges"></ul>
       <a href="/post/{{post.id}}" class="DiscussionListItem-main">
-        <h3 class="DiscussionListItem-title">{{post.title}}</h3>
+        <span class="DiscussionListItem-title">{{post.title}}</span>
         <ul class="DiscussionListItem-info">
           <li class="item-tags">
             <span class="TagsLabel ">
