--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 
 
     <script src="https://use.fontawesome.com/328dabcfd7.js"></script>
-    <link rel="stylesheet" href="https://discuss.flarum.org/assets/forum-64c7858d.css">
+    <link rel="stylesheet" href="/static/css/forum-64c7858d.css">
     <link rel="stylesheet" href="/static/css/main.css">
     {% block stylesheet %}{% endblock %}
   </head>
