--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,5 +14,12 @@ h2 {
     font-weight: bold;
 }
 
+.item-index {
+	float: right;
+	margin-right: 10px;
+	margin-top: 1px;
+	font-size: 11px;
+}
+
 
 
