--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,7 @@
     <style type="text/css" adt="123"></style>
     <style type="text/css"></style>
 
-
-    <script src="https://use.fontawesome.com/328dabcfd7.js"></script>
+    <link rel="stylesheet" href="/static/css/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/forum-64c7858d.css">
     <link rel="stylesheet" href="/static/css/main.css">
     {% block stylesheet %}{% endblock %}
